--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     build:
       context: ./api/
       dockerfile: Dockerfile
-    command: /bin/sh -c "rm -f /app/tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    command: sh -c "rm -f /app/tmp/pids/server.pid && yarn && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - ./api:/app
       - ./api/vendor/bundle:/app/vendor/bundle
@@ -32,7 +32,7 @@ services:
     volumes:
       - ./front:/app
       - /app/node_modules
-    command: sh -c "npm run serve"
+    command: sh -c "npm install && npm run serve"
     ports:
       - "8080:8080"
 
